WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
257802
[FFC] ASSERTION FAILED: formattingContextRoot.hasChild() when flex item has inline content
https://bugs.webkit.org/show_bug.cgi?id=257802
Summary
[FFC] ASSERTION FAILED: formattingContextRoot.hasChild() when flex item has i...
alan
Reported
2023-06-07 07:32:27 PDT
ssia
Attachments
Patch
(3.40 KB, patch)
2023-06-07 07:46 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2023-06-07 07:46:36 PDT
Created
attachment 466618
[details]
Patch
EWS
Comment 2
2023-06-07 09:29:54 PDT
Committed
264944@main
(a104b168ce9f): <
https://commits.webkit.org/264944@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 466618
[details]
.
Radar WebKit Bug Importer
Comment 3
2023-06-07 09:30:17 PDT
<
rdar://problem/110401281
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug